fixed spacing on descriptions and features on mobile
git-svn-id: svn+ssh://dev.lonestarpercussion.com/home/bitnami/svn/LoneStarPercussion@68 63fb4e68-bf31-4eef-be91-eb21767c3a16

--- a/app/webroot/css/pages/product.scss
+++ b/app/webroot/css/pages/product.scss
@@ -198,7 +198,14 @@
         
     }
     .description{
-		.content{ max-width: 550px; padding-left: 10px;} // Maintains readability of text
+		.content{ 
+			max-width: 550px; 
+		
+			@media (min-width: 767px){
+				padding-left: 10px;
+			}
+		
+		} // Maintains readability of text
         @include clearfix;
     }
 	.features .content{
